# TicTacToe-C-

./: CMakeLists.txt  README.md  main.cpp
inc/: ttt.h
inc/ttt/: engine.h  interface.h
src/: ttt.cpp  ttt.h
